kubernetes/kubernetes-dashboard/overlays/k3s/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    k8s-app: kubernetes-dashboard
    app.kubernetes.io/instance: kubernetes-dashboard
  name: kubernetes-dashboard-http
  namespace: kubernetes-dashboard
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`dashboard.k3s.arthurvardevanyan.com`)"
      kind: Rule
      services:
        - name: kubernetes-dashboard
          scheme: https
          port: 443
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    k8s-app: kubernetes-dashboard
    app.kubernetes.io/instance: kubernetes-dashboard
  name: kubernetes-dashboard-https
  namespace: kubernetes-dashboard
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`dashboard.k3s.arthurvardevanyan.com`)"
      kind: Rule
      services:
        - name: kubernetes-dashboard
          scheme: https
          port: 443
  tls:
    domains:
      - main: dashboard.k3s.arthurvardevanyan.com
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/instance: kubernetes-dashboard
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  redirectScheme:
    scheme: https
    permanent: true
